# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import categoriasRouter from "./categorias.js";
 import favoritosRouter from "./favoritos.js";
 import likesRouter from "./likes.js";
 import followsRouter from "./follows.js";
+import comentariosRouter from "./comentarios.js";
 import reportsRouter from "./reports.js";
 import adminRouter from "./admin.js";
 import usuariosRouter from "./usuarios.js";
@@ -19,6 +20,7 @@ router.use("/categorias", categoriasRouter);
 router.use("/favoritos", favoritosRouter);
 router.use("/likes", likesRouter);
 router.use("/follows", followsRouter);
+router.use("/comentarios", comentariosRouter);
 router.use("/reports", reportsRouter);
 router.use("/admin", adminRouter);
 router.use("/usuarios", usuariosRouter);
